<resources>
    <string name="app_name">Photo Challenge</string>
    <string name="mail_hint">Email</string>
    <string name="login_btn">Login</string>
    <string name="link_register">No account yet? Create one</string>
    <string name="welcome">Welcome!</string>
    <string name="btn_register">Register</string>
    <string name="login_link_txt">Already a member? Login</string>
    <string name="password_hint">Password</string>
    <string name="passConfirm_hint">Confirm Password</string>
    <string name="ok_asAString">OK</string>
    <string name="name_hint">Name</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="create_challenge">Create Challenge</string>
    <string name="friends">Friends</string>
    <string name="favs">Favourites</string>
    <string name="challenges">Challenges</string>
    <string name="search_challenges">Search Challenges</string>
    <string name="share">Share</string>
    <string name="weekly_ranking">Weekly Ranking</string>
    <string name="browse">Browse</string>
    <string name="title_hint">Title</string>
    <string name="theme_hint">Theme</string>
    <string name="private_radio">private</string>
    <string name="public_radio">public</string>
    <string name="image_button_create">image_button_create</string>
    <string name="logout">Logout</string>
    <string name="no_friend_text">Add as friend to see more about this user</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="uid">uid</string>
    <string name="friend_request_text">You have friend request from this user.</string>
    <string name="confirm_button_txt">CONFIRM</string>
    <string name="decline_button_txt">DECLINE</string>
    <string name="friends_text">You are friends</string>
    <string name="create_new_challenge">Create new challenge!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="challengee_no_photos_text">This challenge have no photos. \n Be the first one to participate!</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="comments">Comments</string>
</resources>
