<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_createChallenge"
            android:icon="@drawable/ic_create_challenge"
            android:title="@string/create_challenge">
        </item>
        <item
            android:id="@+id/nav_challenges"
            android:icon="@drawable/ic_challenges"
            android:title="@string/challenges" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_action_heart"
            android:title="@string/favs" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_action_balloon"
            android:title="@string/friends" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_ranking"
                android:icon="@drawable/ic_action_achievement"
                android:title="@string/weekly_ranking" />
            <item
                android:id="@+id/nav_browse"
                android:icon="@drawable/ic_browse"
                android:title="@string/browse" />
        </menu>
    </item>

</menu>
