<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.telerik.airelementalteam.thephotochallengeapp.views.RegisterActivity">

        <ImageView
            android:id="@+id/tunningReg"
            android:src="@drawable/ic_tunning_icon"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_small_height"
            android:layout_centerHorizontal="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_below="@+id/tunningReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_top_bottom_margin"
            android:layout_marginBottom="@dimen/text_input_top_bottom_margin">
            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/mail_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_below="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_top_bottom_margin"
            android:layout_marginBottom="@dimen/text_input_top_bottom_margin">
            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/name_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_top_bottom_margin"
            android:layout_marginBottom="@dimen/text_input_top_bottom_margin"
            android:layout_below="@+id/nameLayout">
            <EditText
                android:id="@+id/passInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passConfirmLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_top_bottom_margin"
            android:layout_marginBottom="@dimen/text_input_top_bottom_margin"
            android:layout_below="@+id/passLayout">
            <EditText
                android:id="@+id/passConfirmInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/passConfirm_hint"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:onClick="registerUser"
            android:layout_below="@+id/passConfirmLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_bottom_margin"
            android:layout_marginBottom="@dimen/button_top_bottom_margin"
            android:text="@string/btn_register"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_below="@id/btnRegister"
            android:text="@string/login_link_txt"
            android:gravity="center"
            android:textSize="16sp"/>

    </RelativeLayout>
</ScrollView>

