<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        tools:context="com.telerik.airelementalteam.thephotochallengeapp.views.fragments.CreateChallengeFragment">

        <TextView
            android:id="@+id/create_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create new challenge!"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="70dp"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_title"
            android:layout_marginTop="@dimen/text_input_top_bottom_margin"
            android:layout_marginBottom="@dimen/text_input_top_bottom_margin">
            <EditText
                android:id="@+id/titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:hint="@string/title_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/themeLayout"
            android:layout_below="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_top_bottom_margin"
            android:layout_marginBottom="@dimen/text_input_top_bottom_margin">
            <EditText
                android:id="@+id/themeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:hint="@string/theme_hint"/>
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/create_radio_group"
            android:layout_below="@+id/themeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/radio_right_margin"
                android:text="@string/private_radio"
                android:textColor="@color/colorDarkGrey"/>

            <RadioButton
                android:id="@+id/radio_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_radio"
                android:textColor="@color/colorDarkGrey"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/create_icon"
            android:contentDescription="@string/image_button_create"
            android:src="@drawable/create_challenge"
            android:layout_below="@+id/create_radio_group"
            android:layout_marginTop="@dimen/img_small_height"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_small_height"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</ScrollView>


